@@ -1,15 +1,11 @@
 package com.fren_gor.ultimateAdvancementAPI.util;
 
-import lombok.experimental.UtilityClass;
-import org.bukkit.Bukkit;
+import com.fren_gor.ultimateAdvancementAPI.nms.util.ReflectionUtil;
 import org.jetbrains.annotations.Contract;
 import org.jetbrains.annotations.NotNull;
 import org.jetbrains.annotations.Nullable;
 import org.jetbrains.annotations.UnmodifiableView;
 
-import java.util.Arrays;
-import java.util.Collections;
-import java.util.HashMap;
 import java.util.List;
 import java.util.Map;
 import java.util.Objects;
@@ -17,31 +13,31 @@ import java.util.Objects;
 /**
  * Utility class for handling UltimateAdvancementAPI versions.
  */
-@UtilityClass
 public class Versions {
 
-    private static final String API_VERSION = "1.0.2";
-    private static String nmsVersion = null;
+    private static final String API_VERSION = "2.0.0";
 
-    private static final List<String> SUPPORTED_VERSIONS = Collections.unmodifiableList(Arrays.asList("1.15", "1.15.1", "1.15.2"));
+    private static final List<String> SUPPORTED_NMS_VERSIONS = List.of("v1_15_R1", "v1_16_R1", "v1_16_R2", "v1_16_R3", "v1_17_R1");
 
-    private static final List<String> SUPPORTED_NMS_VERSIONS = Collections.unmodifiableList(Arrays.asList("v1_15_R1"));
+    private static final Map<String, List<String>> NMS_TO_VERSIONS = Map.of(
+            "v1_15_R1", List.of("1.15", "1.15.1", "1.15.2"),
+            "v1_16_R1", List.of("1.16", "1.16.1", "1.16.2"),
+            "v1_16_R2", List.of("1.16.3", "1.16.4"),
+            "v1_16_R3", List.of("1.16.5"),
+            "v1_17_R1", List.of("1.17", "1.17.1")
+    );
 
-    private static final Map<String, List<String>> NMS_TO_VERSIONS;
+    private static final Map<String, String> NMS_TO_FANCY = Map.of(
+            "v1_15_R1", "1.15-1.15.2",
+            "v1_16_R1", "1.16-1.16.2",
+            "v1_16_R2", "1.16.3-1.16.4",
+            "v1_16_R3", "1.16.5",
+            "v1_17_R1", "1.17-1.17.1"
+    );
 
-    static {
-        Map<String, List<String>> map = new HashMap<>();
-        map.put("v1_15_R1", Collections.unmodifiableList(Arrays.asList("1.15", "1.15.1", "1.15.2")));
-        NMS_TO_VERSIONS = Collections.unmodifiableMap(map);
-    }
-
-    private static final Map<String, String> NMS_TO_FANCY;
-
-    static {
-        Map<String, String> map = new HashMap<>();
-        map.put("v1_15_R1", "1.15-1.15.2");
-        NMS_TO_FANCY = Collections.unmodifiableMap(map);
-    }
+    private static final List<String> SUPPORTED_VERSIONS = SUPPORTED_NMS_VERSIONS.stream()
+            .flatMap(s -> NMS_TO_VERSIONS.get(s).stream())
+            .toList();
 
     /**
      * Gets the NMS version of the current server.
@@ -52,10 +48,7 @@ public class Versions {
      */
     @NotNull
     public static String getNMSVersion() {
-        if (nmsVersion != null) {
-            return nmsVersion;
-        }
-        return nmsVersion = Bukkit.getServer().getClass().getName().split("\\.")[3];
+        return ReflectionUtil.COMPLETE_VERSION;
     }
 
     /**
@@ -166,5 +159,9 @@ public class Versions {
     @Contract("null -> null; !null -> !null")
     public static String removeInitialV(String string) {
         return string == null || string.isEmpty() || string.charAt(0) != 'v' ? string : string.substring(1);
+    }
+
+    private Versions() {
+        throw new UnsupportedOperationException("Utility class.");
     }
 }
